--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,8 +19,21 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "color": "^3.0.0",
     "expo": "^25.0.0",
+    "flux-standard-action": "^2.0.1",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-action-button": "^2.8.4",
+    "react-native-swipeout": "^2.3.3",
+    "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.0.0-beta.27",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.5.0",
+    "redux-promise": "^0.5.3",
+    "uuid": "^3.2.1"
   }
 }
