--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#awsmobilejs
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+aws-exports.js
+AppSync.js
