--- a/awsmobilejs/.awsmobile/info/project-info.json
+++ b/awsmobilejs/.awsmobile/info/project-info.json
@@ -7,16 +7,16 @@
 	"StartCommand": "yarn start",
 	"InitializationTime": "2018-01-30-09-39-18",
 	"LastConfigurationTime": "2018-01-30-09-40-58",
-	"LastNPMInstallTime": "",
+	"LastNPMInstallTime": "2018-01-30-09-58-59",
 	"FrontendLastBuildTime": "",
 	"LastPublishTime": "",
 	"BackendFormat": "yml",
-	"BackendLastBuildTime": "",
-	"BackendLastUpdateTime": "",
-	"BackendLastUpdateSuccessful": false,
+	"BackendLastBuildTime": "2018-01-30-09-59-35",
+	"BackendLastUpdateTime": "2018-01-30-09-58-16",
+	"BackendLastUpdateSuccessful": true,
 	"BackendProjectID": "5c4a5374-7447-4552-bca9-6ee32887a8ce",
 	"BackendProjectName": "notes-app",
 	"BackendProjectConsoleUrl": "https://console.aws.amazon.com/mobilehub/home#/5c4a5374-7447-4552-bca9-6ee32887a8ce/build",
 	"BackendProjectCreationTime": "2018-01-30T17:41:20.175Z",
-	"BackendProjectLastUpdatedTime": "2018-01-30T17:41:20.175Z"
+	"BackendProjectLastUpdatedTime": "2018-01-30T17:58:16.451Z"
 }
